--- a/index.html
+++ b/index.html
@@ -266,6 +266,38 @@
         </div>
       </section>
     </main>
+    <div class="container">
+        <footer class="footer d-flex justify-content-center justify-content-sm-between flex-column gap-5 flex-md-row">
+        <div class="footer-left">
+          <h2>
+            Connect with me:
+          </h2>
+          <p>
+            Satisfied with me? Please contact me
+          </p>
+          <div class="footer-left__icons d-flex gap-3">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-telegram"></i>
+            <i class="fa-brands fa-linkedin"></i>
+          </div>
+        </div>
+        <div class="footer-right">
+          <h2>Contact me, let’s make magic together</h2>
+          <form class="row gy-2 align-items-start flex-column">
+              <label class="visually-hidden" for="autoSizingInput">Name</label>
+              <input type="text" class="form-control" id="autoSizingInput" placeholder="Name:">
+              <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
+                <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Email:">
+                <input type="text" class="form-control py-5" id="autoSizingInputGroup" placeholder="messages">
+                <div class="">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </form>
+            </div>
+        </div>
+      </footer>
+      </div>
     <script src="./bootstrap/bootstrap.bundle.min.js"></script>
   </body>
 </html>
